[ci] adpat arm build
[ci] adpat arm build 2